# minchin.pelican.readers.tasknotes

./: .editorconfig  .gitignore  CHANGELOG.rst  LICENSE.txt  README.rst  invoke.yaml  pyproject.toml  setup.py
.github/workflows/: isort.yml
.requirements/: base.in  dev.in  test.in
minchin/pelican/readers/tasknotes/: __init__.py  constants.py  generator.py  initialize.py
test/: pelicanconf.py
test-issue-1/: pelicanconf.py  requirements.in
test-issue-1/GTD/projects/: Personal Upkeep.md
test-issue-1/GTD/tasks/2025/: task-202508251118.md  task-202509101610.md
test/content/: markdown-test.md
test/content/tasks/: task-202509011519.md  task-202509012055.md  task-202509012056.md  task-202509022225.md
